New features:
- Added support for torch.nn.Hardshrink torch.nn.Softplus, torch.nn.Softshrink
- Add support for the following random sampling operations:
    torch.bernoulli, torch.distributions.Bernoulli
- Added Adam optimizer
- Added support for torch.nn.AdaptiveAvgPool1d, torch.nn.AdaptiveAvgPool3d
- Migrated to PyTorch version 1.7.1

Known issues:

Bug fixes: