@@ -184,8 +184,6 @@ EXPECTED_FAILURES = {
     "test_nn_FractionalMaxPool3d_size": "T30594",
     "test_nn_FractionalMaxPool3d_asymsize": "T30594",
     "test_nn_FractionalMaxPool3d_alert_nondeterministic": "T30594",
-    "test_nn_Threshold_threshold_value": "T30611",
-    "test_nn_Threshold_large_value": "T30611",
     "test_nn_BCELoss_no_reduce": "T30603",
     "test_nn_BCEWithLogitsLoss_no_reduce": "T30603",
     "test_nn_NLLLoss_no_reduce_ignore_index": "T30603",
@@ -208,7 +206,6 @@ EXPECTED_FAILURES = {
     "test_nn_MultiMarginLoss_p_no_reduce": "T30603",
     "test_nn_MultiMarginLoss_margin_no_reduce": "T30603",
     "test_nn_MultiMarginLoss_weights_no_reduce": "T30603",
-    "test_nn_PixelShuffle": "T30611",
     "test_nn_AdaptiveMaxPool1d": "T30564",
     "test_nn_AdaptiveMaxPool3d_tuple": "T30564",
     "test_nn_AdaptiveMaxPool3d_tuple_none": "T30564",
